<resources>
    <string name="app_name">Hear Me</string>
    <!--    Splash Screen App Title-->
    <string name="SplashScreenAppScreenName">SplashScreen</string>

    <string-array name="BookName">
        <item>A Christmas Carol</item>
        <item>The Adventures of Pinocchio </item>
    </string-array>

    <string-array name="Book1ChaptersList">
        <item>Title</item>
        <item>Preface</item>
        <item>Stave 1</item>
        <item>Stave 2</item>
        <item>Stave 3</item>
        <item>Stave 4</item>
        <item>Stave 5</item>
        <item>Copyright info </item>
    </string-array>

    <string-array name="Book2ChaptersList">
        <item>Title</item>
        <item>Chapter 1</item>
        <item>Chapter 2</item>
        <item>Chapter 3</item>
        <item>Chapter 4</item>
        <item>Chapter 5</item>
        <item>Chapter 6</item>
        <item>Chapter 7</item>
        <item>Chapter 8</item>
        <item>Chapter 9</item>
        <item>Chapter 10</item>

    </string-array>

    <!--    Action Bar Title text-->
    <string name="Book1">A Christmas Carol</string>
    <string name="Book2">The Adventures of Pinocchio</string>

    <!--    Book1 Chapter Audio-->
    <string name="DCTitle">Title</string>
    <string name="DCPreface">Preface</string>
    <string name="DCStave1">Stave 1</string>
    <string name="DCStave2">Stave 2</string>
    <string name="DCStave3">Stave 3</string>
    <string name="DCStave4">Stave 4</string>
    <string name="DCStave5">Stave 5</string>
    <string name="DCCoppyRight">Copy Right Info</string>

    <!--    Book 2 Pinocchio-->
    <string name="PTitle">Title</string>
    <string name="PChapt1">Chapter 1</string>
    <string name="PPChapt2">Chapter 2</string>
    <string name="PChapt3">Chapter 3</string>
    <string name="PChapt4">Chapter 4</string>
    <string name="PChapt5">Chapter 5</string>
    <string name="PChapt6">hapter 6</string>
    <string name="PChapt7">Chapter 7</string>
    <string name="PChapt8">Chapter 8</string>
    <string name="PChapt9">Chapter 9</string>
    <string name="PChapt10">Chapter 10</string>


    <!--    Audio COntorls Desc-->
    <string name="PlayAudio">Play Audio</string>
    <string name="PauseAudio">Pause Audio</string>
    <string name="PlayList">List Chapters</string>

    <!--    Image DSC-->
    <string name="ImagDsc">A Christmas Carol</string>

    <!--    SeekBar DSC-->
    <string name="SeekBarDSC">Change Progress</string>

    <!--    Splash Screen Text-->
    <string name="SplashScreenTitle">HearMe</string>
    <string name="SplashScreenSlogen">Listen to enjoy. Listen to learn.</string>
    <string name="AppIconDsc">App Icon Here ME</string>
    <string name="SplashScreenLoadingMSG">Loading Please Wait …</string>
    <string name="StopAudio">Stop Audio</string>

    <!--    Percent Text View-->
    <string name="percent">0 %</string>

    <!--    Progress Indicator-->
    <string name="ProgressTitle">Please Wait</string>
    <string name="ProgressMSG">Loading</string>

    <!--    Alert Dialog Text-->
    <string name="ADTitle">Check Internet</string>
    <string name="AlertDialogMSG">Please Connect to the Internet</string>
    <string name="ADPositive">Connect</string>
    <string name="ADNegative">Cancel</string>

    <!--    Exit Alert Dialog-->
    <string name="ExitADTitle">Exit</string>
    <string name="ExitADMSG">Are you sure you want to exit?</string>
    <string name="ExitADPositive">Yes</string>
    <string name="ExitADNegative">No</string>


    <!--    Register Activity-->
    <string name="RegisterScreenTitle">Register</string>
    <string name="RegisterTitle">Register</string>
    <string name="EmailHint">Email</string>
    <string name="PasswordHint">Password</string>
    <string name="RegisterBTN">Register</string>
    <string name="AlreadyRegistered">Already Registered?</string>
    <string name="LoginHere">Login Here</string>
    <string name="EmailError">Email cannot be empty</string>
    <string name="PasswordError">Password cannot be empty</string>

    <!--    Login Activity-->
    <string name="LoginScreenTitle">Login </string>
    <string name="LoginHeading">Login</string>
    <string name="LoginEmailHint">Email</string>
    <string name="LoginPasswordHint">Password</string>
    <string name="LoginBTN">Login</string>
    <string name="NewUser">Not registered yet?</string>
    <string name="RegisterHere">Register Here</string>
    <string name="ForgotPass">Forgot Password</string>
    <string name="LoginEmailError">Email cannot be empty</string>
    <string name="LoginPassworderror">Password cannot be empty</string>


    <!--    Forgot Password -->
    <string name="ScreenTitle">Forgot Password</string>
    <string name="FPTitle">Forgot Password</string>
    <string name="FPEmailhint">Email</string>
    <string name="FPBTN">Reset Password</string>
    <string name="FPEmailerror">Email can not be empty</string>
    <string name="CheckEmail">Check your email for the password Reset Link</string>
    <string name="Tryagain">Please Try Again</string>


    <!--     Main options Menu -->
    <string name="Logout">logout</string>
    <string name="help">Help and Support</string>
    <string name="Contact">Contact us</string>
    <string name="AppTheme">App Theme</string>
    <string name="Light">Light</string>
    <string name="Night">Dark</string>
    <string name="System">System Default</string>
    <string name="LogoutConfermTitle">Confirm Logout?</string>
    <string name="LogoutConfermMSG">Are you sure you want to logout</string>
    <string name="LogoutSuss">You have logout from the app</string>
    <string name="TTSSettings">Text to Speech Settings</string>
    <string name="OpenTTSSettingsiconDSC">Open the Text to Speech Settings</string>


    <!--    Contact us -->
    <string name="ContactTitle">Contact us</string>
    <!--    Help and Support-->
    <string name="helpTitle">Help and Support</string>
    <string name="TextDetails">This app has been made as a part of the Android project for SY-BSC-IT. This app ahs been made by Varun Manoj Kumar, Salvin Suraj and Ankit Prakash.</string>
    <string name="Email">Varun E-mail: varun.kumar@xaviers.edu.in \n
    Salvin EMail: salvin.thomas@xaviers.edu.in \n
    Ankit Prakash: ankit.prakash@xaviers.edu.in \n\n
        Varun Phone: +91 8369506195 \n
        Salvin Phone: +91 98472 08543 \n
        Ankit Phone: +91 93215 53724 \n
    </string>

    <!--    Player Menu -->
    <string name="Transcript">Open Transcript</string>

    <!--    Transcript String-->
    <string name="Transcripttitle">Transcript</string>

    <!--    Transcript Text-->
    <string name="DCTitleText">
        A CHRISTMAS CAROLIN PROSEBEINGA GOAST Story of ChristmasBYCHARLES DICKENS
    </string>
    <string name="FPvalidemailerror">Enter valid E-mail Address</string>
</resources>
