<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/logout"
        android:contentDescription="@string/Logout"
        android:icon="@drawable/exitapp"
        android:title="@string/Logout"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/helpandsupport"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/contactus"
        android:title="@string/Contact" />
    <item android:title="@string/AppTheme">
        <menu>
            <item
                android:id="@+id/SystemDefault"
                android:checkable="false"
                android:icon="@drawable/systemdefault"
                android:title="@string/System"
                app:showAsAction="withText" />
            <item
                android:id="@+id/light"
                android:icon="@drawable/lightmode"
                android:title="@string/Light"
                app:showAsAction="withText" />
            <item
                android:id="@+id/Night"
                android:icon="@drawable/nightmode"
                android:title="@string/Night"
                app:showAsAction="withText" />
        </menu>
    </item>
</menu>
