<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    tools:context="com.varuncollegeproject.audiobook.Book1Chapter1audio">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="259dp"
        android:layout_height="165dp"
        android:contentDescription="@string/ImagDsc"
        android:scaleType="centerInside"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        app:srcCompat="@drawable/a_crismesccarol" />

    <ImageButton
        android:id="@+id/pauseaudio"
        style="@android:style/Widget.ImageButton"
        android:layout_width="67dp"
        android:layout_height="53dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/ImgBackgroundColor"
        android:contentDescription="@string/PauseAudio"
        app:layout_constraintBottom_toBottomOf="@+id/ListChapters"
        app:layout_constraintEnd_toStartOf="@+id/ListChapters"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ListChapters"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pauseaudio" />

    <ImageButton
        android:id="@+id/playaudio"
        style="@android:style/Widget.ImageButton"
        android:layout_width="67dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/ImgBackgroundColor"
        android:contentDescription="@string/PlayAudio"
        app:layout_constraintBottom_toBottomOf="@+id/pauseaudio"
        app:layout_constraintEnd_toStartOf="@+id/pauseaudio"
        app:layout_constraintHorizontal_bias="0.399"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pauseaudio"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/playaudio" />

    <ImageButton
        android:id="@+id/ListChapters"
        style="@android:style/Widget.ImageButton"
        android:layout_width="67dp"
        android:layout_height="53dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/ImgBackgroundColor"
        android:contentDescription="@string/PlayList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854"
        app:srcCompat="@drawable/playlist" />

    <SeekBar
        android:id="@+id/audioprog"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="243dp"
        android:layout_height="19dp"
        android:contentDescription="@string/SeekBarDSC"
        app:layout_constraintBottom_toTopOf="@+id/pauseaudio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.617" />

</androidx.constraintlayout.widget.ConstraintLayout>
