<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    tools:context=".pchap3">

    <ImageView
        android:id="@+id/circleImageView"
        android:layout_width="298dp"
        android:layout_height="309dp"
        android:contentDescription="@string/ImagDsc"
        android:src="@drawable/a_crismesccarol"
        app:civ_border_color="@color/white"
        app:civ_border_width="6dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="168dp"
        android:layout_height="65dp"
        android:layout_marginBottom="69dp"
        android:backgroundTint="@color/ImgBackgroundColor"
        android:contentDescription="@string/PlayAudio"
        android:cropToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:srcCompat="@drawable/playaudio"
        app:tint="@color/black" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/SeekBarDSC"
        android:foregroundTint="@color/Seekbarprogressbarbg"
        android:progressTint="@color/splashScreenBG"
        android:secondaryProgressTint="@color/splashScreenBG"
        android:thumbTint="@color/SeekbarThumbcolor"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="180dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:text="@string/percent"
        android:textAlignment="center"
        android:textColor="@color/Progresstextcolor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />
</androidx.constraintlayout.widget.ConstraintLayout>
