<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    tools:context=".Contactus">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="295dp"
        android:layout_height="38dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="63dp"
        android:accessibilityHeading="true"
        android:text="@string/Contact"
        android:textAlignment="center"
        android:textColor="@color/RegisterloginTextcolor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="324dp"
        android:layout_height="76dp"
        android:layout_marginTop="36dp"
        android:text="@string/TextDetails"
        android:textAlignment="gravity"
        android:textColor="@color/RegisterloginTextcolor"
        android:textStyle="normal"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/varunEmail"
        android:layout_width="302dp"
        android:layout_height="257dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="68dp"
        android:autoLink="web|phone|email"
        android:text="@string/Email"
        android:textColor="@color/Progresstextcolor"
        android:textColorLink="@color/LinkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="@string/PlayAudio"
        android:focusable="true"
        android:soundEffectsEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.902"
        app:srcCompat="@drawable/playaudio"
        app:tint="@color/RegisterloginTextcolor" />
</androidx.constraintlayout.widget.ConstraintLayout>
