<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:backgroundTint="@color/BackgroundColor"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:accessibilityHeading="true"
            android:clickable="false"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:linksClickable="false"
            android:scrollHorizontally="true"
            android:text="@string/RegisterTitle"
            android:textColor="@color/RegisterloginTextcolor"
            android:textSize="30sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:addStatesFromChildren="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:ellipsize="end"
                android:fadeScrollbars="true"
                android:hint="@string/EmailHint"

                android:inputType="textEmailAddress"
                android:scrollbars="horizontal"
                android:textColorHint="@color/RegisterloginTextcolor"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:ellipsize="end"
                android:fadeScrollbars="true"
                android:hint="@string/PasswordHint"
                android:inputType="textPassword"
                android:scrollbars="horizontal"
                android:scrollHorizontally="true"
                android:textColorHint="@color/RegisterloginTextcolor"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetpassbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:text="@string/RegisterBTN" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:labelFor="@id/tvLoginHere"
                android:scrollHorizontally="true"
                android:text="@string/AlreadyRegistered"
                android:textColor="@color/RegisterloginTextcolor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLoginHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:clickable="false"
                android:ellipsize="end"
                android:focusable="auto"
                android:linksClickable="true"
                android:scrollHorizontally="true"
                android:soundEffectsEnabled="true"
                android:text="@string/LoginHere"
                android:textColor="@color/LinkColor"
                android:textSize="34sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
