<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="451dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="115dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:accessibilityHeading="true"
            android:clickable="false"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:linksClickable="false"
            android:scrollHorizontally="true"
            android:text="@string/FPTitle"
            android:textColor="@color/RegisterloginTextcolor"
            android:textSize="30sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/resetpassemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:ellipsize="end"
                android:hint="@string/FPEmailhint"
                android:inputType="textEmailAddress"

                android:scrollHorizontally="true"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetpassbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:text="@string/FPBTN" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
